# faultevent

./: README.md  pyproject.toml
src/faultevent/: data.py  util.py
src/faultevent/event/: __init__.py  _classify.py  _core.py  _util.py
src/faultevent/signal/: __init__.py  _autoreg.py  _comparator.py  _core.py  _detector.py  _util.py
