[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "faultevent"
version = "0.0.1"
authors = [
  { name="Arild Bergesen Husebø", email="arhusebo@gmail.com" },
]
description = "Package for working within an event-based condition monitoring framework."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL-3.0-or-later",
    "Operating System :: OS Independent",
]